--- a/views/component/navigation.ejs
+++ b/views/component/navigation.ejs
@@ -24,7 +24,7 @@
     </ul>
     <ul class="nav navbar-right top-nav">
         <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Yasmine Probst <b
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Peter Kuang <b
                         class="caret"></b></a>
             <ul class="dropdown-menu">
                 <li>
