--- a/views/component/navigation.ejs
+++ b/views/component/navigation.ejs
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </a>
-        <a class="navbar-brand brand-color" href="/"> FoodDetect&nbsp;&nbsp;&nbsp;</a>
+        <a class="navbar-brand brand-color" href="/"> SystemLogo&nbsp;&nbsp;&nbsp;</a>
     </div>
     <!-- Top Menu Items -->
     <ul class="nav navbar-left top-nav">
