--- a/views/component/common_header.ejs
+++ b/views/component/common_header.ejs
@@ -28,12 +28,17 @@
 <!-- Bootstrap Core JavaScript -->
 <script src="js/template/bootstrap.min.js"></script>
 
+<!--block UI-->
+<script src="js/template/plugins/blockUI/jquery.blockUI.min.js"></script>
+
 <!-- Morris Charts JavaScript -->
 <!--<script src="js/template/plugins/morris/raphael.min.js"></script>-->
 <!--<script src="js/template/plugins/morris/morris.min.js"></script>-->
 <!--<script src="js/template/plugins/morris/morris-data.js"></script>-->
 
 <!-- Custom JS -->
+<script src="js/customize/common_var.js" type="application/javascript"></script>
+<script src="js/customize/setup.js" type="application/javascript"></script>
 <script src="js/customize/navigation.js" type="application/javascript"></script>
 <!--jquery extend-->
 <script src="js/template/jquery-ext.js" type="application/javascript"></script>
