--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="input-group">
                                 <input id="search-input" type="text" class="input-lg form-control transparent"
-                                       placeholder="Image name..." value="">
+                                       placeholder="Search by image name..." value="">
                                 <span class="input-group-btn">
                                     <button id="search-input-button" class="btn btn-lg btn-ghost" type="button">Search</button>
                                 </span>
