--- a/public/css/template/card-design.css
+++ b/public/css/template/card-design.css
@@ -1,5 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,300);
-@import url(//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css);
+/*@import url(http://fonts.googleapis.com/css?family=Roboto:400,300);*/
+/*@import url(//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css);*/
 .card .card-image{
     overflow: hidden;
     -webkit-transform-style: preserve-3d;
