--- a/views/component/navigation.ejs
+++ b/views/component/navigation.ejs
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </a>
-        <a class="navbar-brand brand-color" href="/"> SystemLogo&nbsp;&nbsp;&nbsp;</a>
+        <a class="navbar-brand brand-color" href="/"> FoodDetect&nbsp;&nbsp;&nbsp;</a>
     </div>
     <!-- Top Menu Items -->
     <ul class="nav navbar-left top-nav">
@@ -18,21 +18,21 @@
         <li id="image_management">
             <a href="image_management"><i class="fa fa-fw fa-image"></i> Image Management</a>
         </li>
-        <li id="trash">
-            <a href="image_trash"><i class="fa fa-fw fa-trash"></i> Trash</a>
-        </li>
+        <!--<li id="trash">-->
+            <!--<a href="image_trash"><i class="fa fa-fw fa-trash"></i> Trash</a>-->
+        <!--</li>-->
     </ul>
     <ul class="nav navbar-right top-nav">
         <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Peter Kuang <b
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Yasmine Probst <b
                         class="caret"></b></a>
             <ul class="dropdown-menu">
                 <li>
-                    <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
+                    <a href="/profile"><i class="fa fa-fw fa-user"></i> Profile</a>
                 </li>
                 <li class="divider"></li>
                 <li>
-                    <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                    <a href="/logout"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
                 </li>
             </ul>
         </li>
