--- a/views/image_management.ejs
+++ b/views/image_management.ejs
@@ -12,26 +12,58 @@
 
     <!--common resource-->
     <%- include component/common_header.ejs %>
+    <%- include component/common_component.ejs %>
     <!--customize css-->
     <link href="css/template/card-design.css" rel="stylesheet">
     <link href="css/template/plugins/dropzone.css" rel="stylesheet">
     <link href="vendor/lightbox/ekko-lightbox.min.css" rel="stylesheet">
     <link href="css/customize/image-management.css" rel="stylesheet">
+    <link rel="stylesheet" href="imageviewer/dist/viewer.min.css" type="text/css">
     <!--customize js-->
     <script src="js/template/plugins/dropzone/dropzone.js"></script>
-    <script src="vendor/lightbox/ekko-lightbox.js"></script>
-    <script src="js/customize/image_management.js"></script>
+    <!--<script src="vendor/lightbox/ekko-lightbox.js"></script>-->
+    <script type="text/javascript" src="imageviewer/dist/viewer.min.js"></script>
+    <script type="text/javascript" src="js/template/plugins/placeholder/placeholder.min.js"></script>
+    <script type="text/javascript" src="js/template/plugins/lazyload/jquery.lazyload.min.js"></script>
+    <script type="text/javascript" src="js/customize/image_management.js"></script>
 </head>
 
 <body page="image_management">
 
-<div id="wrapper">
+<div class="wrapper">
 
     <div id="page-wrapper">
         <!-- Navigation -->
         <%- include component/navigation.ejs %>
         <!-- sidebar -->
-        <%- include component/tree.ejs %>
+        <%- include component/tree_header.ejs %>
+        <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
+        <div id="resize-nav-bar" class="nav navbar-nav side-nav">
+            <div id="tree-header">
+                <br>
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 col-xs-12">
+                        <div class="col-lg-6 col-md-6 col-xs-6">
+                            <span class="tree-title">Categories[View]</span>
+                        </div>
+                        <div id="edit-tree-button" title="Switch to edit mode"class="col-lg-1 col-md-1 col-xs-1 tree-expand-operator "><span
+                                    class="glyphicon glyphicon-edit"></span></div>
+                        <div id="view-tree-button" title="Switch to view mode" class="col-lg-1 col-md-1 col-xs-1 tree-expand-operator hidden"><span
+                                    class="glyphicon glyphicon-eye-open"></span></div>
+                        <div id="refresh-button" title="Refresh cache" class="col-lg-1 col-md-1 col-xs-1 tree-expand-operator"><span
+                                    class="glyphicon glyphicon-refresh"></span></div>
+                        <div id="expand-all-button" title="Expand all nodes" class="col-lg-1 col-md-1 col-xs-1 tree-expand-operator"><span
+                                    class="glyphicon glyphicon-plus"></span></div>
+                        <div id="collapse-all-button" title="Collapse all nodes" class="col-lg-1 col-md-1 col-xs-1 tree-expand-operator"><span
+                                    class="glyphicon glyphicon-minus"></span></div>
+                    </div>
+                </div>
+                <hr class="grey-line">
+            </div>
+            <div id="tree" class="fancytree-colorize-hover fancytree-fade-expander"></div>
+        </div>
+
+        <!--main container-->
         <div class="container-fluid">
 
             <!-- Page Heading -->
@@ -40,14 +72,6 @@
                     <h1 class="page-header">
                         Image management
                     </h1>
-                    <!--<ol class="breadcrumb">-->
-                    <!--<li>-->
-                    <!--<i class="fa fa-home"></i> <a href="/"> Home</a>-->
-                    <!--</li>-->
-                    <!--<li class="active">-->
-                    <!--<i class="fa fa-dashboard"></i> Image Management-->
-                    <!--</li>-->
-                    <!--</ol>-->
                 </div>
             </div>
             <!-- /.row -->
@@ -58,7 +82,7 @@
                         <b>Path:</b>
                     </div>
                     <div class="col-lg-11">
-                        <span id="current-path-showcase">&nbsp;/</span>
+                        <span id="current-path-showcase" class="path-color">&nbsp;/</span>
                     </div>
                 </div>
             </div>
@@ -69,25 +93,26 @@
                 <div class="col-lg-12">
                     <!--sort type-->
                     <div class="col-lg-1" style="margin-top:6px">
-                        <b>Sort by:</b>
+                        <b>Sort:</b>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-lg-4">
                         <div class="btn-group btn-group-justified" role="group" aria-label="...">
                             <div class="btn-group" role="group">
-                                <button type="button" class="btn btn-default">Date</button>
+                                <button type="button" class="btn btn-default" id="date-sort-button" name="sort-button" data-sort-type="date" data-order-type=0><span></span>&nbsp;Date</button>
                             </div>
                             <div class="btn-group" role="group">
-                                <button type="button" class="btn btn-default">Size</button>
+                                <button type="button" class="btn btn-default" id="size-sort-button" name="sort-button" data-sort-type="size" data-order-type=0><span></span>&nbsp;Size</button>
                             </div>
                             <div class="btn-group" role="group">
-                                <button type="button" class="btn btn-default">Name</button>
+                                <button type="button" class="btn btn-default" id="name-sort-button" name="sort-button" data-sort-type="name" data-order-type=0><span></span>&nbsp;Name</button>
                             </div>
                         </div>
                     </div>
                     <!--search bar-->
-                    <div class="col-lg-7 col-lg-offset-1">
+                    <div class="col-lg-7 col-lg-offset-0">
                         <div class="input-group">
-                            <input id="search-input" type="text" class="form-control" placeholder="Search by image name or category name...">
+                            <input id="search-input" type="text" class="form-control"
+                                   placeholder="Search by image name...">
                             <span class="input-group-btn">
                                 <button id="search-button" class="btn btn-primary" type="button">Search</button>
                              </span>
@@ -103,17 +128,23 @@
                     <div class="col-lg-1" style="margin-top:6px">
                         <b>Action:</b>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-4">
                         <div class="btn-group btn-group-justified" role="group" aria-label="...">
                             <div class="btn-group" role="group">
                                 <button id="upload-button" type="button" class="btn btn-primary" data-toggle="modal"
-                                        data-target="#upload-modal"><span class="glyphicon glyphicon-upload"
+                                        ><span class="glyphicon glyphicon-upload"
                                                                           aria-hidden="true"></span> Upload
+                                </button>
+                            </div>
+                            <div class="btn-group" role="group">
+                                <button id="download-button" type="button" class="btn btn-info"><span
+                                            class="glyphicon glyphicon-cloud-download" aria-hidden="true"></span>
+                                    Download
                                 </button>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-8 col-lg-offset-1">
+                    <div class="col-lg-6 col-lg-offset-1">
                         <div class="btn-group btn-group-justified" role="group" aria-label="...">
                             <div class="btn-group" role="group">
                                 <button id="check-all-button" type="button" class="btn btn-success"><span
@@ -121,20 +152,15 @@
                                 </button>
                             </div>
                             <div class="btn-group" role="group">
-                                <button id="move-trash-button" type="button" class="btn btn-danger"><span class="glyphicon glyphicon-trash"
-                                                                                   aria-hidden="true"></span> Move trash
-                                </button>
-                            </div>
-                            <div class="btn-group" role="group">
-                                <button type="button" class="btn btn-warning"><span
-                                            class="glyphicon glyphicon-cloud-download" aria-hidden="true"></span>
-                                    Download
-                                </button>
-                            </div>
-                            <div class="btn-group" role="group">
-                                <button id="move-to-button" type="button" class="btn btn-info" data-toggle="modal"
+                                <button id="move-to-button" type="button" class="btn btn-warning" data-toggle="modal"
                                         data-target="#move-to-modal"><span class="glyphicon glyphicon-move"
                                                                            aria-hidden="true"></span> MoveTo
+                                </button>
+                            </div>
+                            <div class="btn-group" role="group">
+                                <button id="move-trash-button" type="button" class="btn btn-danger"><span
+                                            class="glyphicon glyphicon-trash"
+                                            aria-hidden="true"></span> Move trash
                                 </button>
                             </div>
                         </div>
@@ -142,22 +168,11 @@
                 </div>
             </div>
             <hr>
-            <!--notification-->
-            <!--<div class="row">-->
-            <!--<div class="col-lg-12">-->
-            <!--<div class="alert alert-info alert-dismissable">-->
-            <!--<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>-->
-            <!--<i class="fa fa-info-circle"></i> <strong>Like SB Admin?</strong> Try out <a-->
-            <!--href="http://startbootstrap.com/template-overviews/sb-admin-2" class="alert-link">SB-->
-            <!--Admin 2</a> for additional features!-->
-            <!--</div>-->
-            <!--</div>-->
-            <!--</div>-->
             <!--image list-->
             <div class="row">
-                <div id="image-list" class="col-lg-12">
+                <ul id="image-list" class="col-lg-12">
                     <!--gallery-->
-                </div>
+                </ul>
             </div>
             <!-- /.row -->
 
@@ -177,28 +192,26 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                             aria-hidden="true" onclick="loadImageList()">&times;</span></button>
-                <h4 class="modal-title" id="modal-label">Upload path: <span id="upload-path-filling"></span></h4>
+                <h4 class="modal-title" id="modal-label"><b>Upload path:</b> &nbsp;<span id="upload-path-filling"
+                                                                                         class="path-color">/</span>
+                </h4>
             </div>
             <div class="modal-body">
-                <div id="dropzone">
-                    <form action="/upload" class="dropzone needsclick dz-clickable" id="upload"
-                          enctype="multipart/form-data" method="post">
+                <form action="/upload" class="zone needsclick dz-clickable" id="dropzone"
+                      enctype="multipart/form-data" method="post">
+                    <input type="hidden" id="upload-path" name="upload_path" value="/"/>
+                    <input type="hidden" id="upload-path-id" name="upload_path_id" value="-1"/>
+                    <div class="dz-message needsclick">
+                        <div class="upload-block-font">Drop files here or click to upload.</div>
+                    </div>
 
-                        <div class="dz-message needsclick">
-                            <div class="upload-block-font">Drop files here or click to upload.</div>
-                            <!--<br>-->
-                            <!--<span class="note needsclick">(This is just a demo dropzone. Selected files are <strong>not</strong> actually uploaded.)</span>-->
-                            <!--<input type="file" name="file" multiple />-->
-                            <!--<input type="submit" value="test"/>-->
-                        </div>
-
-                    </form>
-                </div>
+                </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal" onclick="loadImageList()">Close
+                <button id="clear-upload-history" type="button" class="btn btn-success">Clear history</button>
+                <button id="close-upload-modal" type="button" class="btn btn-warning" data-dismiss="modal">Close
                 </button>
-                <button id="clear-upload-history" type="button" class="btn btn-primary">Clear history</button>
+                <button id="confirm-upload" type="button" class="btn btn-primary">Submit</button>
             </div>
         </div>
     </div>
